--- a/src/theme/default.less
+++ b/src/theme/default.less
@@ -94,6 +94,22 @@ mark {
   }
 
   .ant-table-thead > tr > th {
+    .ant-table-column-sorters {
+      justify-content: flex-start;
+      gap: 4px;
+      min-width: 0;
+    }
+
+    .ant-table-column-title {
+      flex: 0 1 auto;
+      min-width: 0;
+    }
+
+    .ant-table-column-sorter {
+      flex: none;
+      margin-left: 0;
+    }
+
     .ant-table-column-sorter,
     .ant-table-filter-trigger {
       opacity: 0;
